# sample-auth-sts

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
.github/workflows/: ci-python.yml  ci.yml
samplego/client/: go.mod  go.sum  main.go
samplego/client/internal/config/: config.go  config_test.go
samplego/client/internal/e2e/: e2e_test.go
samplego/scripts/: real-aws-smoke.sh
samplego/server/: config.yaml  go.mod  main.go
samplego/server/domain/: doc.go  errors.go  fakes_test.go  inbound.go  outbound.go  service.go  service_test.go  types.go  verify.go  verify_service.go  verify_service_test.go
samplepython/: Makefile  pyproject.toml
samplepython/client/: config.py  envelope.py  main.py  proof.py  transport.py
samplepython/server/: main.py
samplepython/server/adapter/inbound/: auth.py  http_util.py  middleware.py  router.py  verify.py
samplepython/server/adapter/outbound/: clock.py  config.py  issuer.py  sts.py
samplepython/server/cmd/: mocksts.py
samplepython/server/domain/: errors.py  ports.py  service.py  types.py  verify_service.py
samplepython/server/internal/: config.py  democert.py  logging.py
samplepython/shared/: duration.py  httpread.py
samplepython/tests/client/: test_config.py  test_proof.py  test_transport.py
samplepython/tests/e2e/: test_e2e.py
samplepython/tests/server/: fakes.py  test_config_policy.py  test_domain_service.py  test_duration.py  test_inbound_auth.py  test_inbound_verify.py  test_issuer.py  test_sts.py  test_verify_service.py
samplepython/tests/shared/: test_duration.py  test_httpread.py
(+36 files in other folders)
